<resources>
    <string name="app_name">The Movie DB</string>
    <string name="THE_MOVIE_API_KEY">72d85e924c296c4135fbd56b7c1222fe</string>
    <string name="poster_content_description">Movie Poster</string>

    <string name="action_settings">Settings</string>

    <string name="pref_movie_shorting_key" translatable="false">movie_shorting</string>
    <string name="pref_movie_short_label">Short By</string>
    <string name="overview_label">Overview</string>


    <string name="pref_default_movie_shorting_value" translatable="false">popular</string>

    <string name="pref_popular_movie_value" translatable="false">popular</string>
    <string name="pref_top_rated_movie_value" translatable="false">top_rated</string>
    <string name="pref_favorite_movie_value" translatable="false">favorite</string>
    <string name="pref_popular_movie_label">Most Popular</string>
    <string name="pref_top_rated_movie_label">Top Rated</string>
    <string name="pref_favorite_movie_label">Favorite</string>


    <string name="nav_action_inbox">Inbox</string>
    <string name="nav_action_draft">Draft</string>
    <string name="nav_action_sent">Sent</string>
    <string name="nav_action_outbox">Outbox</string>
    <string name="nav_action_trash">Trash</string>


</resources>
